# LearnOpenGL

./: CMakeLists.txt  README.md
CoordinateSystems/: CMakeLists.txt
CoordinateSystems/src/: CoordinateWidget.cpp  CoordinateWidget.h
CoordinateSystems2/: CMakeLists.txt
CoordinateSystems2/res/: resources.qrc
CoordinateSystems2/src/: CoordinateWidget.cpp  main.cpp
CoordinateSystems3/: CMakeLists.txt
CoordinateSystems3/src/: CoordinateWidget.cpp  CoordinateWidget.h
HelloTriangle/: CMakeLists.txt
HelloTriangle/src/: TriangleWidget.cpp  TriangleWidget.h  main.cpp
HelloTriangle2/: CMakeLists.txt
HelloTriangle2/src/: RectangleWidget.cpp  RectangleWidget.h  main.cpp
HelloWindow/: CMakeLists.txt
HelloWindow/src/: ClearWidget.cpp  ClearWidget.h  main.cpp
Shaders/: CMakeLists.txt
Shaders/res/: resources.qrc
Shaders/src/: ShaderWidget.cpp  main.cpp
Shaders2/: CMakeLists.txt
Shaders2/src/: ShaderWidget.cpp  ShaderWidget.h
Textures/: CMakeLists.txt
Textures/res/: resources.qrc
Textures/src/: TextureWidget.cpp  TextureWidget.h
Textures2/: CMakeLists.txt
Textures2/src/: TextureWidget.cpp
Textures3/: CMakeLists.txt
Textures3/res/: resources.qrc
Textures3/res/shaders/: shader.fs
Textures3/src/: TextureWidget.cpp  TextureWidget.h
Textures4/: CMakeLists.txt
Textures4/src/: TextureWidget.cpp  TextureWidget.h  main.cpp
Transformations/: CMakeLists.txt
Transformations/src/: TransformationWidget.cpp  TransformationWidget.h  main.cpp
cmake/: AddQtLibrary.cmake  GenerateQtExe.cmake  GlobalDefined.cmake  Predefined.cmake
